comprobar si hay promociones para listarlas

--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -5,8 +5,9 @@
 {%load static%}
 
 
-
+{% if promociones %}
 {% include 'products/prueba2.html' with promociones=promociones %}
+    {% endif %}
 
 
 
