--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -23,8 +23,10 @@
   
                 <div class="category-content-flex">
                   <h3 class="category-item-title">{{ clasification.nombre }}</h3>
-  
-                  <p class="category-item-amount">(53)</p>
+
+                    {% with product_count=clasification.productos_padre.count %}
+                  <p class="category-item-amount">{{ product_count }}</p>
+                        {% endwith %}
                 </div>
   
                 <a href="#" class="category-btn">Show all</a>
