--- a/templates/products/productos.html
+++ b/templates/products/productos.html
@@ -103,16 +103,34 @@
                       </a>
 
                       <div class="showcase-rating">
+                          {% for i in "12345"|make_list %}
+                              {% with j=i|add:-1 %}
+
+                              {% if i|add:0  <= top.rating_product.average_rating %}
                         <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
+
+
+
+                              {% endif %}
+
+                              {% if i|add:0  > top.rating_product.average_rating and j|add:0  < top.rating_product.average_rating  %}
+                                      <ion-icon name="star-half"></ion-icon>  <!-- Estrella media -->
+                        {% else %}
+
+                                      {% endif %}
+
+                             {% if i|add:0  >= top.rating_product.average_rating and j|add:0  >= top.rating_product.average_rating %}
+                              <ion-icon name="star-outline"></ion-icon>
+                                  {% endif %}
+{% endwith %}
+                              {% endfor %}
+
+
                       </div>
 
                       <div class="price-box">
                           {% if top.offer %}
-                        <del>{{ top.offer.precio_viejo }}</del>
+                        <del>{{ top.offer.precio_viejo }} </del>
                           {% endif %}
                         <p class="price">$ {{ top.price }}</p>
                       </div>
