--- a/templates/products/productosMinimal.html
+++ b/templates/products/productosMinimal.html
@@ -165,103 +165,6 @@
 
           </div>
 
-{#          <div class="showcase-container">#}
-{##}
-{#            <div class="showcase">#}
-{##}
-{#              <a href="#" class="showcase-img-box">#}
-{#                <img src="./assets/images/products/sports-6.jpg" alt="air tekking shoes - white" class="showcase-img"#}
-{#                  width="70">#}
-{#              </a>#}
-{##}
-{#              <div class="showcase-content">#}
-{##}
-{#                <a href="#">#}
-{#                  <h4 class="showcase-title">Air Trekking Shoes - white</h4>#}
-{#                </a>#}
-{##}
-{#                <a href="#" class="showcase-category">Sports</a>#}
-{##}
-{#                <div class="price-box">#}
-{#                  <p class="price">$52.00</p>#}
-{#                  <del>$55.00</del>#}
-{#                </div>#}
-{##}
-{#              </div>#}
-{##}
-{#            </div>#}
-{##}
-{#            <div class="showcase">#}
-{##}
-{#              <a href="#" class="showcase-img-box">#}
-{#                <img src="./assets/images/products/shoe-3.jpg" alt="Boot With Suede Detail" class="showcase-img" width="70">#}
-{#              </a>#}
-{##}
-{#              <div class="showcase-content">#}
-{##}
-{#                <a href="#">#}
-{#                  <h4 class="showcase-title">Boot With Suede Detail</h4>#}
-{#                </a>#}
-{##}
-{#                <a href="#" class="showcase-category">boots</a>#}
-{##}
-{#                <div class="price-box">#}
-{#                  <p class="price">$20.00</p>#}
-{#                  <del>$30.00</del>#}
-{#                </div>#}
-{##}
-{#              </div>#}
-{##}
-{#            </div>#}
-{##}
-{#            <div class="showcase">#}
-{##}
-{#              <a href="#" class="showcase-img-box">#}
-{#                <img src="./assets/images/products/shoe-1.jpg" alt="men's leather formal wear shoes" class="showcase-img"#}
-{#                  width="70">#}
-{#              </a>#}
-{##}
-{#              <div class="showcase-content">#}
-{##}
-{#                <a href="#">#}
-{#                  <h4 class="showcase-title">Men's Leather Formal Wear shoes</h4>#}
-{#                </a>#}
-{##}
-{#                <a href="#" class="showcase-category">formal</a>#}
-{##}
-{#                <div class="price-box">#}
-{#                  <p class="price">$56.00</p>#}
-{#                  <del>$78.00</del>#}
-{#                </div>#}
-{##}
-{#              </div>#}
-{##}
-{#            </div>#}
-{##}
-{#            <div class="showcase">#}
-{##}
-{#              <a href="#" class="showcase-img-box">#}
-{#                <img src="./assets/images/products/shoe-2.jpg" alt="casual men's brown shoes" class="showcase-img" width="70">#}
-{#              </a>#}
-{##}
-{#              <div class="showcase-content">#}
-{##}
-{#                <a href="#">#}
-{#                  <h4 class="showcase-title">Casual Men's Brown shoes</h4>#}
-{#                </a>#}
-{##}
-{#                <a href="#" class="showcase-category">Casual</a>#}
-{##}
-{#                <div class="price-box">#}
-{#                  <p class="price">$50.00</p>#}
-{#                  <del>$55.00</del>#}
-{#                </div>#}
-{##}
-{#              </div>#}
-{##}
-{#            </div>#}
-{##}
-{#          </div>#}
 
         </div>
 
@@ -269,208 +172,60 @@
 
       <div class="product-showcase">
 
-        <h2 class="title">Top Rated</h2>
+        <h2 class="title">Mejor Calificación</h2>
 
         <div class="showcase-wrapper  has-scrollbar">
 
           <div class="showcase-container">
 
+              {% for product in top_rated|slice:":5" %}
+
             <div class="showcase">
 
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/watch-3.jpg" alt="pocket watch leather pouch" class="showcase-img"
+              <a href="{% url 'products:detail' product.handle %}" class="showcase-img-box">
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" class="showcase-img"
                   width="70">
               </a>
 
               <div class="showcase-content">
 
-                <a href="#">
-                  <h4 class="showcase-title">Pocket Watch Leather Pouch</h4>
+                <a href="{% url 'products:detail' product.handle %}">
+                  <h4 class="showcase-title">{{ product.name }}</h4>
                 </a>
 
-                <a href="#" class="showcase-category">Watches</a>
+               {% if product.clasificacion.all %}
+
+              {% for clasi in product.clasificacion.all|slice:":1" %}
+
+                <a href="{% url 'products:list' %}?classification_id={{ clasi.id }}" class="showcase-category">{{ clasi.nombre }}</a>
+                    {% endfor %}
+                    {% else %}
+                     {% if product.clasificaciones_padre.all %}
+                             {% for clasi_pa in product.clasificaciones_padre.all|slice:":1" %}
+                     <a href="{% url 'products:list' %}?classification_id_padre={{ clasi_pa.id }}" class="showcase-category">{{ clasi_pa.nombre }}</a>
+                         {% endfor %}
+                         {% endif %}
+                  {% endif %}
 
                 <div class="price-box">
-                  <p class="price">$50.00</p>
-                  <del>$34.00</del>
+
+                  <p class="price">${{ product.price }}</p>
+    {% if product.offer %}
+                  <del>${{ product.offer.precio_viejo }}</del>
+                     {% endif %}
                 </div>
 
               </div>
 
             </div>
 
-            <div class="showcase">
+              {% endfor %}
 
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/jewellery-3.jpg" alt="silver deer heart necklace" class="showcase-img"
-                  width="70">
-              </a>
 
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">Silver Deer Heart Necklace</h4>
-                </a>
-
-                <a href="#" class="showcase-category">Jewellery</a>
-
-                <div class="price-box">
-                  <p class="price">$84.00</p>
-                  <del>$30.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/perfume.jpg" alt="titan 100 ml womens perfume" class="showcase-img"
-                  width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">Titan 100 Ml Womens Perfume</h4>
-                </a>
-
-                <a href="#" class="showcase-category">Perfume</a>
-
-                <div class="price-box">
-                  <p class="price">$42.00</p>
-                  <del>$10.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/belt.jpg" alt="men's leather reversible belt" class="showcase-img"
-                  width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">Men's Leather Reversible Belt</h4>
-                </a>
-
-                <a href="#" class="showcase-category">Belt</a>
-
-                <div class="price-box">
-                  <p class="price">$24.00</p>
-                  <del>$10.00</del>
-                </div>
-
-              </div>
-
-            </div>
 
           </div>
 
-          <div class="showcase-container">
 
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/jewellery-2.jpg" alt="platinum zircon classic ring" class="showcase-img"
-                  width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">platinum Zircon Classic Ring</h4>
-                </a>
-
-                <a href="#" class="showcase-category">jewellery</a>
-
-                <div class="price-box">
-                  <p class="price">$62.00</p>
-                  <del>$65.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/watch-1.jpg" alt="smart watche vital plus" class="showcase-img" width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">Smart watche Vital Plus</h4>
-                </a>
-
-                <a href="#" class="showcase-category">Watches</a>
-
-                <div class="price-box">
-                  <p class="price">$56.00</p>
-                  <del>$78.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/shampoo.jpg" alt="shampoo conditioner packs" class="showcase-img"
-                  width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">shampoo conditioner packs</h4>
-                </a>
-
-                <a href="#" class="showcase-category">cosmetics</a>
-
-                <div class="price-box">
-                  <p class="price">$20.00</p>
-                  <del>$30.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="showcase">
-
-              <a href="#" class="showcase-img-box">
-                <img src="./assets/images/products/jewellery-1.jpg" alt="rose gold peacock earrings" class="showcase-img"
-                  width="70">
-              </a>
-
-              <div class="showcase-content">
-
-                <a href="#">
-                  <h4 class="showcase-title">Rose Gold Peacock Earrings</h4>
-                </a>
-
-                <a href="#" class="showcase-category">jewellery</a>
-
-                <div class="price-box">
-                  <p class="price">$20.00</p>
-                  <del>$30.00</del>
-                </div>
-
-              </div>
-
-            </div>
-
-          </div>
 
         </div>
 
