--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -112,11 +112,12 @@
           <ion-icon name="home-outline"></ion-icon>
       </a>
       
-
-        <button class="action-btn">
-          <ion-icon name="bag-handle-outline"></ion-icon>
-          <span class="count">0</span>
-        </button>
+     
+      <a class="action-btn" href="{% url 'carro:ver_carro' %}">
+        <ion-icon name="bag-handle-outline"></ion-icon>
+        <span class="count">0</span>
+      </a>
+      
 
        
 
