ofertas premium implementado , queda todavia lo de la  barra de progreso

--- a/templates/products/productos.html
+++ b/templates/products/productos.html
@@ -82,7 +82,7 @@
 
             <div class="product-showcase">
 
-              <h3 class="showcase-heading">best sellers</h3>
+              <h3 class="showcase-heading">Más vendidos</h3>
 
               <div class="showcase-wrapper">
 
