--- a/templates/products/create.html
+++ b/templates/products/create.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
+
+    {% if conexion_error %}
+   <div class="alert" role="alert">
+       <strong style="font-weight: bold;">¡Atención!</strong>
+       <span>{{ conexion_error }}</span>
+   </div>
+   {% endif %}
+
+
 <form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
