algunos cambisos en el footer

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -20,82 +20,45 @@
     </div>-->
 
 
-    <div class="footer-category">
 
+    <div class="footer-category">
+{% if classifications %}
         <div class="container">
-  
-          <h2 class="footer-category-title">Brand directory</h2>
-  
-          <div class="footer-category-box">
-  
-            <h3 class="category-box-title">Fashion :</h3>
-  
-            <a href="#" class="footer-category-link">T-shirt</a>
-            <a href="#" class="footer-category-link">Shirts</a>
-            <a href="#" class="footer-category-link">shorts & jeans</a>
-            <a href="#" class="footer-category-link">jacket</a>
-            <a href="#" class="footer-category-link">dress & frock</a>
-            <a href="#" class="footer-category-link">innerwear</a>
-            <a href="#" class="footer-category-link">hosiery</a>
-  
-          </div>
+
+          <h2 class="footer-category-title">Directorio</h2>
+
+
+{% for classification in classifications %}
+    {% if classification.productos_padre.count > 0 %}
   
           <div class="footer-category-box">
-            <h3 class="category-box-title">footwear :</h3>
-          
-            <a href="#" class="footer-category-link">sport</a>
-            <a href="#" class="footer-category-link">formal</a>
-            <a href="#" class="footer-category-link">Boots</a>
-            <a href="#" class="footer-category-link">casual</a>
-            <a href="#" class="footer-category-link">cowboy shoes</a>
-            <a href="#" class="footer-category-link">safety shoes</a>
-            <a href="#" class="footer-category-link">Party wear shoes</a>
-            <a href="#" class="footer-category-link">Branded</a>
-            <a href="#" class="footer-category-link">Firstcopy</a>
-            <a href="#" class="footer-category-link">Long shoes</a>
-          </div>
   
-          <div class="footer-category-box">
-            <h3 class="category-box-title">jewellery :</h3>
-          
-            <a href="#" class="footer-category-link">Necklace</a>
-            <a href="#" class="footer-category-link">Earrings</a>
-            <a href="#" class="footer-category-link">Couple rings</a>
-            <a href="#" class="footer-category-link">Pendants</a>
-            <a href="#" class="footer-category-link">Crystal</a>
-            <a href="#" class="footer-category-link">Bangles</a>
-            <a href="#" class="footer-category-link">bracelets</a>
-            <a href="#" class="footer-category-link">nosepin</a>
-            <a href="#" class="footer-category-link">chain</a>
-            <a href="#" class="footer-category-link">Earrings</a>
-            <a href="#" class="footer-category-link">Couple rings</a>
-          </div>
+         <a href="{% url 'products:list' %}?classification_id_padre={{ classification.id }}" > <h3 class="category-box-title">{{ classification.nombre }} :</h3> </a>
+
+              {% if not classification.parent %}
+            {% if classification.hijos.all %}
+                {% for child_classification in classification.hijos.all %}
+                {% if child_classification.pro.exists %}
+            <a href="{% url 'products:list' %}?classification_id={{ child_classification.id }}" class="footer-category-link">{{ child_classification.nombre }}</a>
+
+                    {% endif %}
+                {% endfor %}
+                 {% endif %}
+                   {% endif %}
+
+
   
-          <div class="footer-category-box">
-            <h3 class="category-box-title">cosmetics :</h3>
-          
-            <a href="#" class="footer-category-link">Shampoo</a>
-            <a href="#" class="footer-category-link">Bodywash</a>
-            <a href="#" class="footer-category-link">Facewash</a>
-            <a href="#" class="footer-category-link">makeup kit</a>
-            <a href="#" class="footer-category-link">liner</a>
-            <a href="#" class="footer-category-link">lipstick</a>
-            <a href="#" class="footer-category-link">prefume</a>
-            <a href="#" class="footer-category-link">Body soap</a>
-            <a href="#" class="footer-category-link">scrub</a>
-            <a href="#" class="footer-category-link">hair gel</a>
-            <a href="#" class="footer-category-link">hair colors</a>
-            <a href="#" class="footer-category-link">hair dye</a>
-            <a href="#" class="footer-category-link">sunscreen</a>
-            <a href="#" class="footer-category-link">skin loson</a>
-            <a href="#" class="footer-category-link">liner</a>
-            <a href="#" class="footer-category-link">lipstick</a>
           </div>
+
+        {% endif %}
+        {% endfor %}
   
+
+
         </div>
-  
+  {% endif %}
       </div>
-  
+
       <div class="footer-nav">
   
         <div class="container">
@@ -224,8 +187,7 @@
               </div>
   
               <address class="content">
-                419 State 414 Rte
-                Beaver Dams, New York(NY), 14812, USA
+                Dirección
               </address>
             </li>
   
@@ -234,7 +196,7 @@
                 <ion-icon name="call-outline"></ion-icon>
               </div>
   
-              <a href="tel:+607936-8058" class="footer-nav-link">(607) 936-8058</a>
+              <a href="tel:+607936-8058" class="footer-nav-link">(555) 555-5555</a>
             </li>
   
             <li class="footer-nav-item flex">
@@ -296,7 +258,7 @@
           <img src="./assets/images/payment.png" alt="payment method" class="payment-img">
   
           <p class="copyright">
-            Copyright &copy; <a href="#">Anon</a> all rights reserved.
+            Copyright &copy; <a href="#">E-commerce</a> all rights reserved.
           </p>
   
         </div>
