--- a/templates/usuario/update_user.html
+++ b/templates/usuario/update_user.html
@@ -1,22 +1,96 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh; background-color: white; margin-top: 3%;">
-  <div style="background-color: white; box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); border-radius: 8px; padding: 40px; width: 100%; max-width: 500px;">
-    <h1 style="font-size: 28px; font-weight: bold; color: #007bff; margin-bottom: 24px;">Editar Perfil</h1>
-    <form method="post" style="display: flex; flex-direction: column; gap: 24px;">
-      {% csrf_token %}
-
-      <div style="display: flex; flex-direction: column; gap: 16px;">
-        {{ form.as_p }}
-      </div>
-
-      <div style="display: flex; justify-content: flex-end;">
-        <button type="submit" style="font-size: 16px; font-weight: bold; color: white; background-color: #ff7f50; border: none; border-radius: 4px; padding: 12px 24px; cursor: pointer; transition: background-color 0.3s ease;">
-          Guardar Cambios
-        </button>
-      </div>
-    </form>
+<style>
+    :root {
+          --spanish-gray: hsl(0, 0%, 60%);
+          --sonic-silver: hsl(0, 0%, 47%);
+          --eerie-black: hsl(0, 0%, 13%);
+          --salmon-pink: hsl(353, 100%, 78%);
+          --sandy-brown: hsl(29, 90%, 65%);
+          --bittersweet: hsl(0, 100%, 70%);
+          --ocean-green: hsl(152, 51%, 52%);
+          --davys-gray: hsl(0, 0%, 33%);
+          --cultured: hsl(0, 0%, 93%);
+          --white: hsl(0, 100%, 100%);
+          --onyx: hsl(0, 0%, 27%);
+      }
+      
+      .edit-profile-container {
+          width: 60em;
+          margin: 6em auto;
+          border-radius: 10px;
+          padding: 2rem;
+          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+          background-color: var(--cultured);
+      }
+  
+      .title {
+          text-align: center;
+          font-size: 2.25rem;
+          font-weight: 600;
+          margin-bottom: 2rem;
+          color: var(--onyx);
+      }
+  
+      .input, .btn {
+          width: 90%;
+          height: 3.125rem;
+          font-size: 1em;
+          border-radius: 5px;
+          padding-left: 20px;
+          border: 1px solid var(--davys-gray);
+          margin-bottom: 20px;
+          box-sizing: border-box;
+      }
+  
+      .input:hover {
+          border: 2px solid black;
+      }
+  
+      .btn {
+          background-color: var(--salmon-pink);
+          border-color: var(--salmon-pink);
+          color: white;
+          cursor: pointer;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+      }
+  
+      .btn:hover {
+          background-color: black;
+          border-color: black;
+      }
+  
+      .inputs-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 24px;
+      }
+  
+      @media screen and (max-width: 1000px) {
+          .edit-profile-container {
+              width: 70%;
+          }
+      }
+  
+      @media screen and (max-width: 650px) {
+          .edit-profile-container {
+              width: 90%;
+          }
+      }
+  </style>
+  
+  <div class="edit-profile-container">
+      <h1 class="title">Editar Perfil</h1>
+      <form method="post" class="inputs-container">
+          {% csrf_token %}
+          <div>
+              {{ form.as_p }}
+          </div>
+          <button type="submit" class="btn">Guardar Cambios</button>
+      </form>
   </div>
-</div>
+  
 {% endblock %}
