--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -118,6 +118,11 @@
         <ion-icon name="bag-handle-outline"></ion-icon>
         <span class="count">0</span>
       </a>
+
+      <a class="action-btn" href="">
+        <ion-icon name="heart-outline"></ion-icon>
+        <span class="count">0</span>
+      </a>
       
 
        
