ocultar corazon para anonimo user

--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -118,11 +118,13 @@
         <ion-icon name="bag-handle-outline"></ion-icon>
         <span class="count">{{ request.session.carro|length }} </span>
       </a>
-
+{% if  request.user.is_authenticated %}
       <a class="action-btn" href="{% url 'products:list' %}?liked_product=fdijvef79vr8y38y3121321}">
         <ion-icon name="heart-outline"></ion-icon>
         <span class="count">{{ cantidad_like }}</span>
       </a>
+
+      {% endif %}
       
 
        
