ahora se pude crear ofertas idefinidas y resuelto anonimo user al ver un producto

--- a/templates/products/oferta/crear_oferta.html
+++ b/templates/products/oferta/crear_oferta.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="end_date" class="form-label">Fecha de Finalización</label>
-                            <input type="date" class="form-control" id="end_date" name="end_date" required>
+                            <input type="date" class="form-control" id="end_date" name="end_date">
                         </div>
                         <button type="submit" class="btn btn-primary">Crear Oferta</button>
                     </form>
