--- a/templates/products/productosFeatured.html
+++ b/templates/products/productosFeatured.html
@@ -89,27 +89,26 @@
                       </p>
 
                       <div class="countdown">
-
-                        <div class="countdown-content">
-
-                          <p class="display-number">{{ offer.get_time_remaining.days  }}</p>
-
-                          <p class="display-text">Days</p>
-
-                        </div>
-
-                        <div class="countdown-content">
-                          <p class="display-number">{{ offer.get_time_remaining.hours  }}</p>
-                          <p class="display-text">Hours</p>
-                        </div>
-
-                        <div class="countdown-content">
-                          <p class="display-number">{{ offer.get_time_remaining.minutes  }}</p>
-                          <p class="display-text">Min</p>
-                        </div>
-
-
-                      </div>
+    {% if offer.get_time_remaining == "Oferta sin fecha de finalización definida" %}
+        <p class="no-end-date-text">Esta oferta puede terminar en cualquier momento</p>
+    {% else %}
+         {% if offer.get_time_remaining.minutes == 0 and offer.get_time_remaining.hours == 0 and offer.get_time_remaining.days == 0 %}
+            <p class="no-end-date-text">Esta oferta puede terminar en cualquier momento</p>
+          {% endif %}
+        <div class="countdown-content">
+            <p class="display-number">{{ offer.get_time_remaining.days }}</p>
+            <p class="display-text">Days</p>
+        </div>
+        <div class="countdown-content">
+            <p class="display-number">{{ offer.get_time_remaining.hours }}</p>
+            <p class="display-text">Hours</p>
+        </div>
+        <div class="countdown-content">
+            <p class="display-number">{{ offer.get_time_remaining.minutes }}</p>
+            <p class="display-text">Min</p>
+        </div>
+    {% endif %}
+</div>
 
                     </div>
 
@@ -125,3 +124,14 @@
             </div>
 
           </div>
+
+<style>
+    .no-end-date-text {
+    background-color: #ffc107; /* Color de fondo amarillo */
+    color: #333; /* Color del texto oscuro */
+    padding: 10px; /* Espaciado interno */
+    border-radius: 5px; /* Bordes redondeados */
+    font-weight: bold; /* Texto en negrita */
+    text-align: center; /* Alineación centrada */
+}
+</style>
