comentada la barra de la cantidad de producto vendidos en la oferta premium

--- a/templates/products/productosFeatured.html
+++ b/templates/products/productosFeatured.html
@@ -70,16 +70,16 @@
 
                     <div class="showcase-status">
                       <div class="wrapper">
-                        <p>
-                          already sold: <b>20</b>
-                        </p>
+{#                        <p>#}
+{#                          already sold: <b>20</b>#}
+{#                        </p>#}
 
                         <p>
-                          available: <b>{{ offer.product.supply }}</b>
+                          Disponibles: <b>{{ offer.product.supply }}</b>
                         </p>
                       </div>
 
-                      <div class="showcase-status-bar"></div>
+{#                      <div class="showcase-status-bar"></div>#}
                     </div>
 
                     <div class="countdown-box">
